# Bounce

./: .gitignore  CMakeLists.txt
include/: .clang_complete  ASystem.hpp  Camera.hh  Component.hpp  Context.hh  GameObject.hpp  LogicScript.hpp  Mesh.hh  Scene.hh  ScriptSystem.hh  ShaderFactory.hh  Texture.hh  params.h
libs/include/: memory.h
shader/: color_f.cg  color_v.cg  psp2cg.sh
src/: .clang_complete  AssetsManager.cpp  Camera.cpp  Context.cpp  Mesh.cpp  Scene.cpp  ScriptSystem.cpp  Shader.cpp  ShaderFactory.cpp  Texture.cpp  main.cpp
